# GD-FSCIL

./: .gitignore  SAFE.py  main.py  pyproject.toml  trainer.py
.devcontainer/: devcontainer.json
args/: domainnet_publish.csv
data/: download_dataset.py  download_txt.py
utils/: data.py  data_manager.py
