[project]
name = "safe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "easydict>=1.13",
    "gdown>=5.2.0",
    "nvitop>=1.6.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
